--- a/expensetracker_frontend/src/index.css
+++ b/expensetracker_frontend/src/index.css
@@ -32,6 +32,7 @@ code {
   background-color: white;
   box-shadow: 0 0 20px rgba(0,0,0,0.25);
   margin-bottom: 20px;
+  z-index: 10;
 }
 
 .heading > h3, h1{
@@ -120,6 +121,6 @@ tr:hover{
   background-color: #deedde;
 }
 
-tr:hover .icon{
-  /* color: #999; */
-}
+/* tr:hover .icon{
+  color: #999;
+} */
